[package]
name = "actix-leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
