[package]
name = "actix-leak"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"

[patch.crates-io]
actix-http = { git = "https://github.com/actix/actix-web" }
actix-router = { git = "https://github.com/actix/actix-web" }
actix-web = { git = "https://github.com/actix/actix-web" }
actix-web-codegen = { git = "https://github.com/actix/actix-web" }
